@@ -62,6 +62,9 @@ Release 2.7.3 - UNRELEASED
     HADOOP-8818. Use equals instead == in MD5MD5CRC32FileChecksum
     and TFileDumper. (Brandon Li via suresh)
 
+    HADOOP-9121. InodeTree.java has redundant check for vName while
+    throwing exception. (Arup Malakar via suresh)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
